third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add_assign/unknown_field_attribute.rs
#[derive(derive_more::AddAssign)]
struct Foo(#[add_assign(unknown)] i32);

fn main() {}
